tests/compiletests/ui/spirv-attr/bool-inputs-err.stderr
error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:14:12
   |
14 |     input: bool,
   |            ^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:15:13
   |
15 |     output: &mut bool,
   |             ^^^^^^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:16:35
   |
16 |     #[spirv(push_constant)] push: &bool,
   |                                   ^^^^^

error: entry-point parameter cannot contain `bool`s
  --> $DIR/bool-inputs-err.rs:17:32
   |
17 |     #[spirv(uniform)] uniform: &Boolthing,
   |                                ^^^^^^^^^^

error: aborting due to 4 previous errors

